tests/machine/x/java/group_by_left_join.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsgroup_by_left_join3125307608/001/Main.java:47: error: incompatible types: Map<String,Object> cannot be converted to DataClass1
			_b14.add(_row12);
			         ^
/tmp/TestCompileValidProgramsgroup_by_left_join3125307608/001/Main.java:56: error: cannot find symbol
		if (!(r.o)) continue;
		       ^
  symbol:   variable o
  location: variable r of type DataClass1
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors


  1| let customers = [
  2|   { id: 1, name: "Alice" },